rename to sequencer_grpc_endpoint

--- a/crates/astria-sequencer-relayer/local.env.example
+++ b/crates/astria-sequencer-relayer/local.env.example
@@ -24,9 +24,9 @@ NO_COLOR=
 # serves RPCs.
 ASTRIA_SEQUENCER_RELAYER_COMETBFT_ENDPOINT="http://127.0.0.1:26657"
 
-# Address of sequencer applcation gRPC service for requesting new blocks.
+# Address of sequencer application gRPC service for requesting new blocks.
 # 127.0.0.1:8080 is the default socket address for its gRPC server.
-ASTRIA_SEQUENCER_RELAYER_SEQUENCER_ENDPOINT="http://127.0.0.1:8080"
+ASTRIA_SEQUENCER_RELAYER_SEQUENCER_GRPC_ENDPOINT="http://127.0.0.1:8080"
 
 # Address at which celestia node serves RPCs. While :26657 is the default port
 # that celestia node binds it clashes with cometbft.
