--- a/crates/astria-sequencer-relayer/local.env.example
+++ b/crates/astria-sequencer-relayer/local.env.example
@@ -19,10 +19,14 @@ ASTRIA_SEQUENCER_RELAYER_PRETTY_PRINT=false
 # `ASTRIA_SEQUENCER_RELAYER_PRETTY_PRINT` is set to `true`.
 NO_COLOR=
 
-# Address of sequencer/cometbft/tendermint to request new blocks.
+# Address of cometbft/tendermint to request new block heights.
 # 127.0.0.1:26657 is the default socket address at which cometbft
 # serves RPCs.
-ASTRIA_SEQUENCER_RELAYER_SEQUENCER_ENDPOINT="http://127.0.0.1:26657"
+ASTRIA_SEQUENCER_RELAYER_COMETBFT_ENDPOINT="http://127.0.0.1:26657"
+
+# Address of sequencer application gRPC service for requesting new blocks.
+# 127.0.0.1:8080 is the default socket address for its gRPC server.
+ASTRIA_SEQUENCER_RELAYER_SEQUENCER_GRPC_ENDPOINT="http://127.0.0.1:8080"
 
 # Address at which celestia node serves RPCs. While :26657 is the default port
 # that celestia node binds it clashes with cometbft.
