--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -69,7 +69,7 @@ jsonrpsee = { workspace = true, features = ["server"] }
 once_cell = { workspace = true }
 tempfile = { workspace = true }
 tokio = { workspace = true, features = ["test-util"] }
-tokio-stream = { workspace = true }
+tokio-stream = { workspace = true, features = ["net"] }
 wiremock = { workspace = true }
 assert-json-diff = "2.0.2"
 tower-http = { version = "0.4", features = ["auth"] }
