feat: support grpc ingress for sequencer (#923)
## Summary
Updates sequencer chart to support grpc ingress.

## Background
We need grpc access to run local rollups against dusk-4, this enables
that ingress.

## Changes
- List changes which were made.

## Testing
Tested using buf curl locally and against preview environment:

```sh
> buf curl --schema buf.build/astria/astria --protocol grpc --insecure -d '{"height": 10}' \                                                                      
         https://grpc.pr-923.dev.astria.org/astria.sequencer.v1.SequencerService/GetSequencerBlock

{
  "header": {
    "cometbftHeader": {
      "version": {
        "block": "11"
      },
      "chainId": "sequencer-test-chain",
      "height": "10",
      "time": "2024-04-04T20:56:39.139623869Z",
      "lastBlockId": {
        "hash": "kZC9YtY/2yMzgFywTwuTzrqx4V14r1e4/Ue8CvMWhYc=",
        "partSetHeader": {
          "total": 1,
          "hash": "glbsPoEpcBgIWAoE8U8UdrpnzkVu517H8A+lqRmCgqg="
        }
      },
      "lastCommitHash": "T/MtZlCt1Pig87rguqA3xWLeyT8wXF9sMozwbjpKG4E=",
      "dataHash": "7P54CyIFJkHEJOCs+wvzRlhEqN7zh03qLi3wIKP1T3g=",
      "validatorsHash": "qrGhJDUB9nA/QGo+DsiLtow2k95obUAsKTCTeF+X/W8=",
      "nextValidatorsHash": "qrGhJDUB9nA/QGo+DsiLtow2k95obUAsKTCTeF+X/W8=",
      "consensusHash": "BICRvH3cKD93v7+R1zxE2ljD34qcvIZ0Bdi389qtoi8=",
      "appHash": "AnN3gdlx+rsrV4KipXVx0pL4rw8+cdS5UlGNXIrdaOo=",
      "lastResultsHash": "/kPWavpKmlxPnJ2on0/7UmNcjzQuf/tzHWjjbFmCByo=",
      "evidenceHash": "47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU=",
      "proposerAddress": "CR5HdhxYxHRTT01BSvEEpsr5DCI="
    },
    "rollupTransactionsRoot": "47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU=",
    "rollupIdsRoot": "47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU="
  },
  "rollupTransactionsProof": {
    "auditPath": "JsGJBReVHuey7Fl7QecbOc3c7YsgK9YBpLs4BaQ07HA=",
    "treeSize": "3"
  },
  "rollupIdsProof": {
    "auditPath": "JsGJBReVHuey7Fl7QecbOc3c7YsgK9YBpLs4BaQ07HA

--- a/charts/sequencer/values.yaml
+++ b/charts/sequencer/values.yaml
@@ -201,7 +201,7 @@ ingress:
     #  - secretName: chart-example-tls
     #    hosts:
     #      - chart-example.local
-  p2p:
+  grpc:
     enabled: false
     hostname: sequencer.localdev.me
     ingressClassName: nginx
