--- a/charts/sequencer/templates/configmaps.yaml
+++ b/charts/sequencer/templates/configmaps.yaml
@@ -6,12 +6,23 @@ metadata:
 data:
   genesis.json: |
     {{- tpl (.Files.Get "files/cometbft/config/genesis.json") $ | nindent 4 }}
+  config.toml: |
+    {{- tpl (.Files.Get "files/cometbft/config/config.toml") $ | nindent 4 }}
+  {{- if not .Values.secretProvider.enabled }}
   node_key.json: |
     {{- tpl (.Files.Get "files/cometbft/config/node_key.json") $ | nindent 4 }}
   priv_validator_key.json: |
     {{- tpl (.Files.Get "files/cometbft/config/priv_validator_key.json") $ | nindent 4 }}
-  config.toml: |
-    {{- tpl (.Files.Get "files/cometbft/config/config.toml") $ | nindent 4 }}
+  {{- end }}
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ .Values.config.moniker }}-cometbft-init-scripts
+  namespace: {{ include "sequencer.namespace" . }}
+data:
+  init-cometbft.sh: |
+    {{- tpl (.Files.Get "files/scripts/init-cometbft.sh") $ | nindent 4 }}
 ---
 apiVersion: v1
 kind: ConfigMap
