--- a/charts/sequencer/values.yaml
+++ b/charts/sequencer/values.yaml
@@ -107,6 +107,23 @@ config:
 sequencer-relayer:
   enabled: false
 
+# When deploying in a production environment should use a secret provider
+# This is configured for use with GCP, need to set own resource names
+# and keys
+secretProvider:
+  enabled: false
+  provider: gcp
+  secrets:
+    # Used in place of config.fundingPrivateKey value when provider enabled
+    privValidatorKey:
+      filename: privValidatorKey.json
+      resourceName: "projects/$PROJECT_ID/secrets/privValidatorKey/versions/latest"
+      key: token
+    nodeKey:
+      filename: nodeKey.json
+      resourceName: "projects/$PROJECT_ID/secrets/privValidatorKey/versions/latest"
+      key: token
+
 ports:
   cometBFTP2P: 26656
   cometBFTRPC: 26657
