--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -60,6 +60,7 @@ tower-http = { version = "0.4", features = ["cors"] }
 config = { package = "astria-config", path = "../astria-config", features = [
   "tests",
 ] }
+base64 = { workspace = true }
 
 [build-dependencies]
 astria-build-info = { path = "../astria-build-info", features = ["build"] }
