--- a/proto/sequencerapis/buf.yaml
+++ b/proto/sequencerapis/buf.yaml
@@ -3,7 +3,7 @@ name: buf.build/astria/astria
 breaking:
   ignore_unstable_packages: true
   use:
-    - FILE
+    - WIRE_JSON
 deps:
   - buf.build/googleapis/googleapis
 lint:
