--- a/proto/sequencerblockapis/buf.yaml
+++ b/proto/sequencerblockapis/buf.yaml
@@ -3,7 +3,7 @@ name: buf.build/astria/sequencerblock-apis
 breaking:
   ignore_unstable_packages: true
   use:
-  - FILE
+    - WIRE_JSON
 deps:
   - buf.build/googleapis/googleapis
   - buf.build/astria/astria
