--- a/charts/sequencer-relayer/values.yaml
+++ b/charts/sequencer-relayer/values.yaml
@@ -18,9 +18,9 @@ images:
 
 config:
   relayer:
-    celestiaBearerToken: ""
-    celestiaRpc: http://celestia-service.astria-dev-cluster.svc.cluster.local:26658
+    celestiaGrpc: http://celestia-service.astria-dev-cluster.svc.cluster.local:9090
     tokenServer: http://celestia-service.astria-dev-cluster.svc.cluster.local:5353
+    celestiaKeyFile: /something/something/data.hex
     cometbftRpc: ""
     sequencerGrpc: ""
 
