--- a/charts/sequencer-relayer/templates/configmaps.yaml
+++ b/charts/sequencer-relayer/templates/configmaps.yaml
@@ -5,11 +5,11 @@ metadata:
   namespace: {{ include "sequencer-relayer.namespace" . }}
 data:
   ASTRIA_SEQUENCER_RELAYER_LOG: "astria_sequencer_relayer=debug"
-  ASTRIA_SEQUENCER_RELAYER_CELESTIA_ENDPOINT: "{{ .Values.config.relayer.celestiaRpc }}"
+  ASTRIA_SEQUENCER_RELAYER_CELESTIA_ENDPOINT: "{{ .Values.config.relayer.celestiaGrpc }}"
   ASTRIA_SEQUENCER_RELAYER_BLOCK_TIME: "1000"
   ASTRIA_SEQUENCER_RELAYER_VALIDATOR_KEY_FILE: /cometbft/config/priv_validator_key.json
   ASTRIA_SEQUENCER_RELAYER_RELAY_ONLY_VALIDATOR_KEY_BLOCKS: "false"
-  ASTRIA_SEQUENCER_RELAYER_CELESTIA_BEARER_TOKEN: "{{ .Values.config.relayer.celestiaBearerToken }}"
+  ASTRIA_SEQUENCER_RELAYER_CELESTIA_KEY_FILE: "{{ .Values.config.relayer.celestiaKeyFile }}"
   TOKEN_SERVER: "{{ .Values.config.relayer.tokenServer }}"
   ASTRIA_SEQUENCER_RELAYER_COMETBFT_ENDPOINT: "{{ .Values.config.relayer.cometbftRpc }}"
   ASTRIA_SEQUENCER_RELAYER_SEQUENCER_GRPC_ENDPOINT: "{{ .Values.config.relayer.sequencerGrpc }}"
