--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -28,10 +28,10 @@ anyhow = "1"
 borsh = { version = "1", features = ["derive"] }
 matchit = "0.7.2"
 tower = "0.4"
-tower-abci = "0.11.0"
+tower-abci = "0.12.0"
 tower-actor = "0.1.0"
-cnidarium = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.69.1" }
-cnidarium-component = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.69.1" }
+cnidarium = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "8b06546af43bf073fd99f3f9d82b8afb51872489" }
+cnidarium-component = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "8b06546af43bf073fd99f3f9d82b8afb51872489" }
 
 async-trait = { workspace = true }
 bytes = { workspace = true }
