--- a/proto/sequencerblockapis/buf.yaml
+++ b/proto/sequencerblockapis/buf.yaml
@@ -1,5 +1,9 @@
 version: v1
 name: buf.build/astria/sequencerblock-apis
+breaking:
+  ignore_unstable_packages: true
+  use:
+    - WIRE_JSON
 deps:
   - buf.build/googleapis/googleapis
   - buf.build/astria/astria
