--- a/charts/sequencer-relayer/templates/configmaps.yaml
+++ b/charts/sequencer-relayer/templates/configmaps.yaml
@@ -9,7 +9,7 @@ data:
   ASTRIA_SEQUENCER_RELAYER_BLOCK_TIME: "1000"
   ASTRIA_SEQUENCER_RELAYER_VALIDATOR_KEY_FILE: /cometbft/config/priv_validator_key.json
   ASTRIA_SEQUENCER_RELAYER_RELAY_ONLY_VALIDATOR_KEY_BLOCKS: "false"
-  ASTRIA_SEQUENCER_RELAYER_CELESTIA_KEY_FILE: "{{ .Values.config.relayer.celestiaKeyFile }}"
+  ASTRIA_SEQUENCER_RELAYER_CELESTIA_KEY_FILE: "/celestia-key/{{ .Values.config.celestiaPrivateKey.filename }}"
   TOKEN_SERVER: "{{ .Values.config.relayer.tokenServer }}"
   ASTRIA_SEQUENCER_RELAYER_COMETBFT_ENDPOINT: "{{ .Values.config.relayer.cometbftRpc }}"
   ASTRIA_SEQUENCER_RELAYER_SEQUENCER_GRPC_ENDPOINT: "{{ .Values.config.relayer.sequencerGrpc }}"
@@ -39,4 +39,14 @@ metadata:
 data:
   start-relayer.sh: |
     {{- .Files.Get "files/scripts/start-relayer.sh" | nindent 4 }}
+---
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: relayer-celestia-key
+  namespace: {{ include "sequencer-relayer.namespace" . }}
+data:
+  key.hex: |
+    {{ .Values.config.celestiaKeyFile.content }}
 ---
