--- a/charts/sequencer-relayer/values.yaml
+++ b/charts/sequencer-relayer/values.yaml
@@ -18,9 +18,8 @@ images:
 
 config:
   relayer:
-    celestiaGrpc: http://celestia-service.astria-dev-cluster.svc.cluster.local:9090
+    celestiaGrpc: http://celestia-app-service.astria-dev-cluster.svc.cluster.local:9090
     tokenServer: http://celestia-service.astria-dev-cluster.svc.cluster.local:5353
-    celestiaKeyFile: /something/something/data.hex
     cometbftRpc: ""
     sequencerGrpc: ""
 
@@ -35,6 +34,12 @@ config:
       tracesTimeout: 10
       otlpHeaders:
       traceHeaders:
+
+  celestiaKeyFile:
+    content: "455411866852444ed669d63edd8ddb8a956a8911918c8d90d513333df4ab3a8f"
+
+  celestiaPrivateKey:
+    filename: "key.hex"
 
 ports:
   relayerRPC: 2450
