--- a/charts/sequencer/templates/statefulsets.yaml
+++ b/charts/sequencer/templates/statefulsets.yaml
@@ -17,8 +17,7 @@ spec:
         app: {{ .Values.config.moniker }}-sequencer
     spec:
       initContainers:
-        # - command: [ "mkdir","-p", "/config", "&&", "mkdir", "-p", "/data", ";", "/scripts/init-cometbft.sh" ]
-          command: [ "tail", "-f", "/dev/null" ]
+        - command: [ "mkdir -p /config /data || /scripts/init-cometbft.sh" ]
           name: config-cometbft
           image: "ghcr.io/tomwright/dasel:alpine"
           volumeMounts:
