--- a/charts/sequencer/templates/statefulsets.yaml
+++ b/charts/sequencer/templates/statefulsets.yaml
@@ -17,7 +17,8 @@ spec:
         app: {{ .Values.config.moniker }}-sequencer
     spec:
       initContainers:
-        - command: [ "mkdir -p /config /data || /scripts/init-cometbft.sh" ]
+        # - command: [ "/scripts/init-cometbft.sh" ]
+        - command: [ "tail", "-f", "/dev/null"]
           name: config-cometbft
           image: "ghcr.io/tomwright/dasel:alpine"
           volumeMounts:
