--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -27,6 +27,7 @@ telemetry = { package = "astria-telemetry", path = "../astria-telemetry", featur
 anyhow = "1"
 borsh = { version = "1", features = ["derive"] }
 matchit = "0.7.2"
+priority-queue = "2.0.2"
 tower = "0.4"
 tower-abci = "0.12.0"
 tower-actor = "0.1.0"
