--- a/charts/sequencer/templates/secretproviderclass.yaml
+++ b/charts/sequencer/templates/secretproviderclass.yaml
@@ -1,24 +1,11 @@
 {{- if .Values.secretProvider.enabled }}
-  
 ---
 apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
   name: sequencer-keys-provider
 spec:
-  provider: gcp
-  secretObjects:
-  {{- range $key, $value := .Values.secretProvider.secrets }}
-  - secretName: {{ kebabcase $key }}
-    type: Opaque
-    data:
-    - objectName: {{ $value.filename }}
-      key: {{ $value.key }}
-  {{- end }}
+  provider: {{ .Values.secretProvider.provider }}
   parameters:
-    secrets: |
-      {{- range $key, $value := .Values.secretProvider.secrets }}
-      - resourceName: {{ $value.resourceName }}
-        fileName: "{{ $value.filename }}"
-      {{- end }}
+    {{- tpl $.Values.secretProvider.parametersTemplate $ | nindent 4 }}
 {{- end }}
