--- a/charts/sequencer/templates/configmaps.yaml
+++ b/charts/sequencer/templates/configmaps.yaml
@@ -7,14 +7,25 @@ data:
   genesis.json: |
     {{- tpl (.Files.Get "files/cometbft/config/genesis.json") $ | nindent 4 }}
   config.toml: |
+    {{- if not .Values.global.dev }}
     {{- tpl (.Files.Get "files/cometbft/config/config.toml") $ | nindent 4 }}
-  {{- if not .Values.secretProvider.enabled }}
-  node_key.json: |
-    {{- tpl (.Files.Get "files/cometbft/config/node_key.json") $ | nindent 4 }}
-  priv_validator_key.json: |
-    {{- tpl (.Files.Get "files/cometbft/config/priv_validator_key.json") $ | nindent 4 }}
+    {{- else }}
+    {{- tpl (.Files.Get "files/cometbft/config/config_38.toml") $ | nindent 4 }}
+    {{- end }}
+---
+{{- if not .Values.secretProvider.enabled }}
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ .Values.config.moniker }}-cometbft-secrets
+  namespace: {{ include "sequencer.namespace" . }}
+data:
+  {{- range $secret := .Values.config.cometBFT.secrets }}
+  {{ $secret.filename }}: |
+    {{- toJson $secret.devContent | nindent 4 }}
   {{- end }}
 ---
+{{- end }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
