--- a/charts/sequencer-faucet/templates/secretproviderclass.yaml
+++ b/charts/sequencer-faucet/templates/secretproviderclass.yaml
@@ -1,21 +1,18 @@
 {{- if .Values.secretProvider.enabled }}
-  {{- range $key, $value := .Values.secretProvider.secrets }}
 ---
 apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
-  name: {{ kebabcase $key }}-faucet
+  name: sequencer-private-key-faucet
 spec:
   provider: gcp
   secretObjects:
-  - secretName: {{ kebabcase $key }}-faucet
+  - secretName: sequencer-private-key-faucet
     type: Opaque
     data:
-    - objectName: {{ $value.filename }}
-      key: {{ $value.key }}
+    - objectName: {{ .Values.config.fundingPrivateKey.secret.filename }}
+      key: {{ .Values.config.fundingPrivateKey.secret.key }}
   parameters:
-    secrets: |
-      - resourceName: {{ $value.resourceName }}
-        fileName: "{{ $value.filename }}"
-  {{- end }}
+    {{- $_ := set $ "key" .Values.config.fundingPrivateKey.secret }}
+    {{- tpl $.Values.secretProvider.parametersTemplate $ | nindent 4 }}
 {{- end }}
