chore(chart): improve geth genesis, update secret providers (#994)
## Summary
Updates secret providers to follow a similar and more generic pattern in
many core packages. Secret values are now passed in at same level as the
dev use content, the parameters for Secret Class Provider can be updated
via template.

Additionally updates the geth genesis to have more fields and data
options, allow upgrades on restart if genesis has changed.

## Background
Easier to update all our charts when similar patterns are used and have
found better ones overtime. This also fixes some issues I saw when doing
first pass testing of cometbft chart, and makes it easier for people
running on non-GCP to run our charts correctly.

## Testing
How are these changes tested?

--- a/charts/sequencer/templates/configmaps.yaml
+++ b/charts/sequencer/templates/configmaps.yaml
@@ -8,13 +8,20 @@ data:
     {{- tpl (.Files.Get "files/cometbft/config/genesis.json") $ | nindent 4 }}
   config.toml: |
     {{- tpl (.Files.Get "files/cometbft/config/config.toml") $ | nindent 4 }}
-  {{- if not .Values.secretProvider.enabled }}
-  node_key.json: |
-    {{- tpl (.Files.Get "files/cometbft/config/node_key.json") $ | nindent 4 }}
-  priv_validator_key.json: |
-    {{- tpl (.Files.Get "files/cometbft/config/priv_validator_key.json") $ | nindent 4 }}
+---
+{{- if not .Values.secretProvider.enabled }}
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ .Values.config.moniker }}-cometbft-secrets
+  namespace: {{ include "sequencer.namespace" . }}
+data:
+  {{- range $secret := .Values.config.cometBFT.secrets }}
+  {{ $secret.filename }}: |
+    {{- toJson $secret.devContent | nindent 4 }}
   {{- end }}
 ---
+{{- end }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
