--- a/charts/sequencer/values.yaml
+++ b/charts/sequencer/values.yaml
@@ -62,15 +62,11 @@ config:
   # Values for CometBFT node configuration
   cometBFT:
     chainId: 'sequencer-test-chain-0'
-
+    genesisTime: '2023-09-22T17:22:35.092832Z'
     # If using postgres for indexing, update to enabled and set the connection
     psql:
       enabled: false
       conn: postgresql://<user>:<password>@<host>:<port>/<db>?<opts>
-
-    # CometBFT P2P Private key.
-    # This is a secret key, should use a secret manager for production deployments
-    privNodeKey: HGWRtLbV8WLGFgbYhaGyaLe++DC+DBoc7O3bri81vs2ZlpR28IFfQScoO1aNOE/ygs8LIPM9UzLzbaab4VMggQ==
     p2p:
       # Address to listen for incoming connections, port is inferred from ports.cometBFTP2P
       laddr: "tcp://0.0.0.0"
@@ -90,14 +86,35 @@ config:
       # Seed mode, in which node constantly crawls the network and looks for
       # peers. If another node asks it for addresses, it responds and disconnects.
       seed_mode: false
-    validator:
-      # Ed25519 address of validator
-      address: 091E47761C58C474534F4D414AF104A6CAF90C22
-      # public key for the validator address
-      pubKey: lV57+rGs2vac7mvkGHP1oBFGHPJM3a+WoAzeFDCJDNU=
-      # private key for the validator address
-      # This is a secret key, should use a secret manager for production deployments
-      privKey: dGOTAweQV8Do9P2n+A8m5EnboDrlxgD3dg4vrYpdIRqVXnv6saza9pzua+QYc/WgEUYc8kzdr5agDN4UMIkM1Q==
+    # These secrets will be generated using the devContent values turned into JSON
+    # and stored unsafely as config maps. Unless SecretProvider is enabled.
+    # Where the secret parameters should be then updated to suit your secret provider
+    # parameter template.
+    secrets:
+      nodeKey:
+        filename: nodeKey.json
+        devContent:
+          priv_key:
+            type: tendermint/PrivKeyEd25519
+            value: HGWRtLbV8WLGFgbYhaGyaLe++DC+DBoc7O3bri81vs2ZlpR28IFfQScoO1aNOE/ygs8LIPM9UzLzbaab4VMggQ==
+        secret:
+          resourceName: "projects/$PROJECT_ID/secrets/privValidatorKey/versions/latest"
+      privValidatorKey:
+        filename: privValidatorKey.json
+        devContent:
+          # Ed25519 address of validator
+          address: 091E47761C58C474534F4D414AF104A6CAF90C22
+          # public key for the validator address
+          pub_key:
+            type: tendermint/PubKeyEd25519
+            value: lV57+rGs2vac7mvkGHP1oBFGHPJM3a+WoAzeFDCJDNU=
+          # private key for the validator address
+          # This is a secret key, should use a secret manager for production deployments
+          priv_key:
+            type: tendermint/PrivKeyEd25519
+            value: dGOTAweQV8Do9P2n+A8m5EnboDrlxgD3dg4vrYpdIRqVXnv6saza9pzua+QYc/WgEUYc8kzdr5agDN4UMIkM1Q==
+        secret:
+          resourceName: "projects/$PROJECT_ID/secrets/privValidatorKey/versions/latest"
     validators:
       - name: core
         power: '1'
@@ -113,16 +130,23 @@ sequencer-relayer:
 secretProvider:
   enabled: false
   provider: gcp
-  secrets:
-    # Used in place of config.fundingPrivateKey value when provider enabled
-    privValidatorKey:
-      filename: privValidatorKey.json
-      resourceName: "projects/$PROJECT_ID/secrets/privValidatorKey/versions/latest"
-      key: token
-    nodeKey:
-      filename: nodeKey.json
-      resourceName: "projects/$PROJECT_ID/secrets/privValidatorKey/versions/latest"
-      key: token
+  # May need to update this template to match the secret provider
+  # it will be passed an object of the form:
+  # { <secret_name>: {
+  #     filename: <filename>,
+  #     secret: { resourceName: <resourceName> }
+  #   }
+  # }
+  #
+  # Can update the source of the secrets at config.cometBFT.secrets to
+  # match the secret provider's requirements. The default works for GCP.
+  # The secret file must be mapped to the <secret_name>.filename value.
+  parametersTemplate: |-
+    secrets: |
+      {{- range $value := .Values.config.cometBFT.secrets }}
+      - resourceName: {{ $value.secret.resourceName }}
+        fileName: "{{ $value.filename }}"
+      {{- end }}
 
 ports:
   cometBFTP2P: 26656
