provide filter for rollups in sequencer-relayer

--- a/charts/sequencer-relayer/values.yaml
+++ b/charts/sequencer-relayer/values.yaml
@@ -23,6 +23,7 @@ config:
     tokenServer: http://celestia-service.astria-dev-cluster.svc.cluster.local:5353
     cometbftRpc: ""
     sequencerGrpc: ""
+    rollupIdFilter: ""
 
     metrics:
       enabled: false
