--- a/crates/astria-sequencer-relayer/local.env.example
+++ b/crates/astria-sequencer-relayer/local.env.example
@@ -44,6 +44,12 @@ ASTRIA_SEQUENCER_RELAYER_BLOCK_TIME=1000
 # Set to true to only relay blocks proposed by the validator key in `ASTRIA_SEQUENCER_RELAYER_VALIDATOR_KEY_FILE`.
 ASTRIA_SEQUENCER_RELAYER_RELAY_ONLY_VALIDATOR_KEY_BLOCKS=false
 
+# A comma-separated list of base64-encoded rollup IDs.
+# Only data from these rollups will be submitted to Celestia.
+# If empty, no filtering will be applied, i.e. data from all
+# rollups will be submitted.
+ASTRIA_SEQUENCER_RELAYER_ROLLUP_ID_FILTER=
+
 # The path to the file storing the cometbft validator key.
 # Used to sign data before submitting it to celestia.
 # Ignored if `ASTRIA_SEQUENCER_RELAYER_DISABLE_RELAY_ALL=false`.
