Use devtag for sequencer because default crashloops

--- a/argocd/appsets/dev/pr-preview/sequencer-validator-0-applicationset.yaml
+++ b/argocd/appsets/dev/pr-preview/sequencer-validator-0-applicationset.yaml
@@ -59,6 +59,8 @@ spec:
 
 
             valuesObject:
+              global:
+                dev: true
               ingress:
                 grpc:
                   enabled: true
