--- a/argocd/apps/dev/main/sequencer-validator-0-application.yaml
+++ b/argocd/apps/dev/main/sequencer-validator-0-application.yaml
@@ -28,7 +28,7 @@ spec:
 
         valuesObject:
           global:
-            dev: false
+            dev: true
           ingress:
             grpc:
               enabled: true
