--- a/charts/sequencer-relayer/templates/configmaps.yaml
+++ b/charts/sequencer-relayer/templates/configmaps.yaml
@@ -5,11 +5,9 @@ metadata:
   namespace: {{ include "sequencer-relayer.namespace" . }}
 data:
   ASTRIA_SEQUENCER_RELAYER_LOG: "astria_sequencer_relayer=debug"
-  ASTRIA_SEQUENCER_RELAYER_CELESTIA_APP_GRPC_ENDPOINT: "{{ .Values.config.relayer.celestiaGrpc }}"
   ASTRIA_SEQUENCER_RELAYER_BLOCK_TIME: "1000"
   ASTRIA_SEQUENCER_RELAYER_VALIDATOR_KEY_FILE: /cometbft/config/priv_validator_key.json
   ASTRIA_SEQUENCER_RELAYER_RELAY_ONLY_VALIDATOR_KEY_BLOCKS: "false"
-  ASTRIA_SEQUENCER_RELAYER_CELESTIA_APP_KEY_FILE: "/celestia-key/{{ .Values.config.celestiaAppPrivateKey.filename }}"
   TOKEN_SERVER: "{{ .Values.config.relayer.tokenServer }}"
   ASTRIA_SEQUENCER_RELAYER_COMETBFT_ENDPOINT: "{{ .Values.config.relayer.cometbftRpc }}"
   ASTRIA_SEQUENCER_RELAYER_SEQUENCER_GRPC_ENDPOINT: "{{ .Values.config.relayer.sequencerGrpc }}"
@@ -28,7 +26,11 @@ data:
   OTEL_EXPORTER_OTLP_HEADERS: "{{ .Values.config.relayer.otel.otlpHeaders }}"
   OTEL_EXPORTER_OTLP_TRACE_HEADERS: "{{ .Values.config.relayer.otel.traceHeaders }}"
   {{- if not .Values.global.dev }}
+  ASTRIA_SEQUENCER_RELAYER_CELESTIA_ENDPOINT: "{{ .Values.config.relayer.celestiaRpc }}"
+  ASTRIA_SEQUENCER_RELAYER_CELESTIA_BEARER_TOKEN: "{{ .Values.config.relayer.celestiaBearerToken }}"
   {{- else }}
+  ASTRIA_SEQUENCER_RELAYER_CELESTIA_APP_GRPC_ENDPOINT: "{{ .Values.config.relayer.celestiaAppGrpc }}"
+  ASTRIA_SEQUENCER_RELAYER_CELESTIA_APP_KEY_FILE: "/celestia-key/{{ .Values.config.celestiaAppPrivateKey.filename }}"
   {{- end }}
 ---
 apiVersion: v1
@@ -47,6 +49,6 @@ metadata:
   name: relayer-celestia-key
   namespace: {{ include "sequencer-relayer.namespace" . }}
 data:
-  key.hex: |
-    {{ .Values.config.celestiaKeyFile.content }}
+  {{ .Values.config.celestiaAppPrivateKey.filename }}: |
+    {{ .Values.config.celestiaAppPrivateKey.content }}
 ---
