--- a/charts/sequencer-relayer/values.yaml
+++ b/charts/sequencer-relayer/values.yaml
@@ -18,7 +18,9 @@ images:
 
 config:
   relayer:
-    celestiaGrpc: http://celestia-app-service.astria-dev-cluster.svc.cluster.local:9090
+    celestiaBearerToken: ""
+    celestiaRpc: http://celestia-service.astria-dev-cluster.svc.cluster.local:26658
+    celestiaAppGrpc: http://celestia-app-service.astria-dev-cluster.svc.cluster.local:9090
     tokenServer: http://celestia-service.astria-dev-cluster.svc.cluster.local:5353
     cometbftRpc: ""
     sequencerGrpc: ""
@@ -35,11 +37,9 @@ config:
       otlpHeaders:
       traceHeaders:
 
-  celestiaKeyFile:
-    content: "8241386890823ca14743e5d4d583f879a5236af29f454ed4da6fe62b8439e2ab"
-
   celestiaAppPrivateKey:
     filename: "key.hex"
+    content: "8241386890823ca14743e5d4d583f879a5236af29f454ed4da6fe62b8439e2ab"
 
 ports:
   relayerRPC: 2450
