--- a/argocd/appsets/dev/pr-preview/sequencer-faucet-applicationset.yaml
+++ b/argocd/appsets/dev/pr-preview/sequencer-faucet-applicationset.yaml
@@ -57,7 +57,9 @@ spec:
             # - $values/apps/sequencer-faucet/dev/values.yaml
 
 
-            # valuesObject:
+            valuesObject:
+              secretProvider:
+                enabled: false
             #   ingress:
             #     annotations:
             #         external-dns.alpha.kubernetes.io/ttl: "120"
