--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -22,6 +22,7 @@ zeroize = { version = "1.6.0", features = ["zeroize_derive"] }
 axum = { workspace = true }
 base64 = { workspace = true }
 base64-serde = { workspace = true }
+brotli = { workspace = true }
 ed25519-consensus = { workspace = true }
 futures = { workspace = true }
 hex = { workspace = true, features = ["serde"] }
