feat(sequencer-relayer)!: submit blobs directly to celestia app (#963)
## Summary
The sequencer-relayer has been updated to submit blobs directly to the
Celestia app via its gRPC interface rather than using the Celestia node
as a proxy.

## Background
There have been issues experienced in the past when using the Celestia
node for blob submissions related to sequences and timeouts. We want to
avoid such issues by "cutting out the middle man" and controlling the
flow of submissions directly inside the relayer.

## Changes
This PR adds a lot of new proto files and their corresponding generated
Rust sources, although they have been reduced to the minimal set of
messages/rpcs required for this new feature.

Aside from these, most of the new code has been isolated to a new module
`celestia_client` inside the `relayer` module. It should be reasonably
self-contained, with a view to possibly extracting it to a separate
crate in the future, and/or providing a generic client API should we
wish to add handling for more chains in the future.

At a high level, the new client is constructed via a builder, which may
need multiple attempts to create the client in the case that the
Celestia app is unreachable. Retries are controlled via `tryhard`,
maxing out at 30s and with infinite attempts. A shutdown signal can
cancel this, allowing for graceful exit. The builder retrieves initial
info from the Celestia app (e.g. chain ID, gas costs). The immutable
chain ID is held as a member of the client, but the other values (being
variable) are cached in the `State` struct and can be retrieved and
cached again should an attempt to submit blobs fail.

The `CelestiaClient` only has one public method: `try_submit`. This is
called in the existing `relayer::write::submit_with_retry` function in
much the same way as previously. The main difference here is that the
client's `try_submit` method is also passed a tokio watch receiver
containing the optional last error. When first submitting a given bat

--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -12,9 +12,12 @@ homepage = "https://astria.org"
 name = "astria-sequencer-relayer"
 
 [dependencies]
+bech32 = "0.11.0"
+cosmrs = "0.16.0"
 dirs = "5.0"
 futures-bounded = "0.2.3"
 http = "0.2.9"
+k256 = "0.13.3"
 pin-project-lite = "0.2"
 serde_path_to_error = "0.1.13"
 zeroize = { version = "1.6.0", features = ["zeroize_derive"] }
@@ -29,11 +32,12 @@ humantime = { workspace = true }
 hyper = { workspace = true }
 itoa = { workspace = true }
 metrics = { workspace = true }
+pbjson-types = { workspace = true }
 prost = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 sha2 = { workspace = true }
-tendermint = { workspace = true, features = ["rust-crypto"] }
+tendermint = { workspace = true, features = ["secp256k1"] }
 tendermint-config = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
