update comment in local.env.example

--- a/crates/astria-sequencer-relayer/local.env.example
+++ b/crates/astria-sequencer-relayer/local.env.example
@@ -45,7 +45,8 @@ ASTRIA_SEQUENCER_RELAYER_BLOCK_TIME=1000
 # Set to true to only relay blocks proposed by the validator key in `ASTRIA_SEQUENCER_RELAYER_VALIDATOR_KEY_FILE`.
 ASTRIA_SEQUENCER_RELAYER_RELAY_ONLY_VALIDATOR_KEY_BLOCKS=false
 
-# A comma-separated list of base64-encoded rollup IDs.
+# A comma-separated list of base64-encoded rollup IDs, often the sha256
+# hash of a rollup name.
 # Only data from these rollups will be submitted to Celestia.
 # If empty, no filtering will be applied, i.e. data from all
 # rollups will be submitted.
