rename IncludeRollup constructor and add comment to local.env.example

--- a/crates/astria-sequencer-relayer/local.env.example
+++ b/crates/astria-sequencer-relayer/local.env.example
@@ -50,6 +50,8 @@ ASTRIA_SEQUENCER_RELAYER_RELAY_ONLY_VALIDATOR_KEY_BLOCKS=false
 # Only data from these rollups will be submitted to Celestia.
 # If empty, no filtering will be applied, i.e. data from all
 # rollups will be submitted.
+# Example for only submitting transactions for rollups of the provided IDs:
+# ASTRIA_SEQUENCER_RELAYER_ROLLUP_ID_FILTER=AQIDBAUGBwgJCgsMDQ4PEBESExQVFhcYGRobHB0eHyA=,IB8eHRwbGhkYFxYVFBMSERAPDg0MCwoJCAcGBQQDAgE=
 ASTRIA_SEQUENCER_RELAYER_ROLLUP_ID_FILTER=
 
 # The path to the file storing the cometbft validator key.
