--- a/charts/sequencer-relayer/values.yaml
+++ b/charts/sequencer-relayer/values.yaml
@@ -13,15 +13,12 @@ global:
 images:
   sequencerRelayer:
     repo: ghcr.io/astriaorg/sequencer-relayer
-    tag: "0.11.0"
+    tag: "0.12.0"
     devTag: latest
 
 config:
   relayer:
-    celestiaBearerToken: ""
-    celestiaRpc: http://celestia-service.astria-dev-cluster.svc.cluster.local:26658
-    celestiaAppGrpc: http://celestia-app-service.astria-dev-cluster.svc.cluster.local:9090
-    tokenServer: http://celestia-service.astria-dev-cluster.svc.cluster.local:5353
+    celestiaAppGrpc: ""
     cometbftRpc: ""
     sequencerGrpc: ""
 
