--- a/charts/sequencer-relayer/templates/configmaps.yaml
+++ b/charts/sequencer-relayer/templates/configmaps.yaml
@@ -30,7 +30,7 @@ data:
   ASTRIA_SEQUENCER_RELAYER_CELESTIA_BEARER_TOKEN: "{{ .Values.config.relayer.celestiaBearerToken }}"
   {{- else }}
   ASTRIA_SEQUENCER_RELAYER_CELESTIA_APP_GRPC_ENDPOINT: "{{ .Values.config.relayer.celestiaAppGrpc }}"
-  ASTRIA_SEQUENCER_RELAYER_CELESTIA_APP_KEY_FILE: "/celestia-key/{{ .Values.config.celestiaAppPrivateKey.filename }}"
+  ASTRIA_SEQUENCER_RELAYER_CELESTIA_APP_KEY_FILE: "/celestia-key/{{ .Values.config.celestiaAppPrivateKey.secret.filename }}"
   {{- end }}
 ---
 apiVersion: v1
@@ -49,6 +49,6 @@ metadata:
   name: relayer-celestia-key
   namespace: {{ include "sequencer-relayer.namespace" . }}
 data:
-  {{ .Values.config.celestiaAppPrivateKey.filename }}: |
-    {{ .Values.config.celestiaAppPrivateKey.content }}
+  {{ .Values.config.celestiaAppPrivateKey.secret.filename }}: |
+    {{ .Values.config.celestiaAppPrivateKey.devContent }}
 ---
