--- a/charts/sequencer-relayer/values.yaml
+++ b/charts/sequencer-relayer/values.yaml
@@ -42,6 +42,7 @@ config:
     secret: 
       filename: "key.hex"
       resourceName: "projects/$PROJECT_ID/secrets/celestiaPrivateKey/versions/latest"
+      key: token
 ports:
   relayerRPC: 2450
   metrics: 9000
