moniker must have value

--- a/charts/sequencer/values.yaml
+++ b/charts/sequencer/values.yaml
@@ -21,7 +21,7 @@ images:
     devTag: latest
 
 config:
-  moniker: ""
+  moniker: "node"
   sequencer:
     authoritySudoAddress: 1c0c490f1b5528d8173c5de46d131160e4b2c0c3
     nativeAssetBaseDenomination: nria
