--- a/charts/sequencer-relayer/values.yaml
+++ b/charts/sequencer-relayer/values.yaml
@@ -66,7 +66,7 @@ storage:
 # This is configured for use with GCP, need to set own resource names
 # and keys
 secretProvider:
-  enabled: true
+  enabled: false
   provider: gcp
   # May need to update this template to match the secret provider
   # it will be passed an object containing:
